[feat] return version when remote attestion not provided.
